Agregué sección de Mis Plantas al index.html

--- a/index.html
+++ b/index.html
@@ -322,6 +322,9 @@ button>
 </div>
 </div>
 
+
+
+</section>
 <section id="misplantas">
   <h2>🌱 Mis Plantas Registradas</h2>
   <div style="margin-bottom: 10px;">
@@ -330,9 +333,8 @@ button>
     <button onclick="mostrarMisPlantas()">Buscar</button>
   </div>
   <div id="resultadoPlantas" class="plant-category"></div>
-</section>
-
-</section> </main> <footer> <h3>&copy; 2025 EcoGrow - Todos los derechos reservados.</h3> <p>Diseñado con <span style="color: red;">❤️</span> para cuidar el planeta.</p> </footer> <!-- Modal de Plantar --> <div id="plantModal"> <div class="modal-content"> <h2>Formulario de Siembra</h2> <form id="plantForm"> <div class="form-group"> <label for="plantName">Planta:</label> <input type="text" id="plantName" name="plantName" readonly> </div>
+</section>s
+</main> <footer> <h3>&copy; 2025 EcoGrow - Todos los derechos reservados.</h3> <p>Diseñado con <span style="color: red;">❤️</span> para cuidar el planeta.</p> </footer> <!-- Modal de Plantar --> <div id="plantModal"> <div class="modal-content"> <h2>Formulario de Siembra</h2> <form id="plantForm"> <div class="form-group"> <label for="plantName">Planta:</label> <input type="text" id="plantName" name="plantName" readonly> </div>
   <div class="form-group">
     <label for="plantType">Tipo de planta:</label>
     <input type="text" id="plantType" name="plantType" readonly>
