--- a/index.html
+++ b/index.html
@@ -325,6 +325,7 @@ button>
 
 
 </section>
+
 <section id="misplantas">
   <h2>🌱 Mis Plantas Registradas</h2>
   <div style="margin-bottom: 10px;">
@@ -333,34 +334,75 @@ button>
     <button onclick="mostrarMisPlantas()">Buscar</button>
   </div>
   <div id="resultadoPlantas" class="plant-category"></div>
-</section>s
-</main> <footer> <h3>&copy; 2025 EcoGrow - Todos los derechos reservados.</h3> <p>Diseñado con <span style="color: red;">❤️</span> para cuidar el planeta.</p> </footer> <!-- Modal de Plantar --> <div id="plantModal"> <div class="modal-content"> <h2>Formulario de Siembra</h2> <form id="plantForm"> <div class="form-group"> <label for="plantName">Planta:</label> <input type="text" id="plantName" name="plantName" readonly> </div>
-  <div class="form-group">
-    <label for="plantType">Tipo de planta:</label>
-    <input type="text" id="plantType" name="plantType" readonly>
-  </div>
+</section>
 
-  <div class="form-group">
-    <label for="userName">Tu nombre:</label>
-    <input type="text" id="userName" name="userName" required>
-  </div>
+</main>
 
-  <div class="form-group">
-    <label for="customPlantName">Nombra a tu planta:</label>
-    <input type="text" id="customPlantName" name="customPlantName" required>
-  </div>
+<footer> 
+  <h3>&copy; 2025 EcoGrow - Todos los derechos reservados.</h3>
+  <p>Diseñado con <span style="color: red;">❤️</span> para cuidar el planeta.</p>
+</footer>
 
-  <div class="form-group">
-    <label for="telefono">Teléfono:</label>
-    <input type="text" id="telefono" name="telefono" required>
-  </div>
+<!-- Modal de Plantar --> 
+<div id="plantModal">
+  <div class="modal-content">
+    <h2>Formulario de Siembra</h2> 
+    <form id="plantForm"> 
+      <div class="form-group"> 
+        <label for="plantName">Planta:</label>
+        <input type="text" id="plantName" name="plantName" readonly> 
+      </div>
+      <div class="form-group">
+        <label for="plantType">Tipo de planta:</label>
+        <input type="text" id="plantType" name="plantType" readonly>
+      </div>
+      <div class="form-group">
+        <label for="userName">Tu nombre:</label>
+        <input type="text" id="userName" name="userName" required>
+      </div>
+      <div class="form-group">
+        <label for="customPlantName">Nombra a tu planta:</label>
+        <input type="text" id="customPlantName" name="customPlantName" required>
+      </div>
+      <div class="form-group">
+        <label for="telefono">Teléfono:</label>
+        <input type="text" id="telefono" name="telefono" required>
+      </div>
+      <div class="form-group">
+        <label for="correo">Correo:</label>
+        <input type="email" id="correo" name="correo" required>
+      </div>
+      <button type="submit">Enviar</button>
+    </form>
+    <button type="button" onclick="cerrarModal()">Cerrar</button>
+  </div> 
+</div>
 
-  <div class="form-group">
-    <label for="correo">Correo:</label>
-    <input type="email" id="correo" name="correo" required>
-  </div>
+<!-- Script para detalles de plantas -->
+<script>
+  function mostrarInformacion(id) {
+    const planta = document.getElementById(id);
+    const detalles = planta.querySelector('.plant-details');
+    document.querySelectorAll('.plant-details').forEach(detalle => {
+      if (detalle !== detalles) detalle.classList.add('hidden');
+    });
+    detalles.classList.toggle('hidden');
+  }
 
-  <button type="submit">Enviar</button>
-</form>
-<button type="button" onclick="cerrarModal()">Cerrar</button>
-</div> </div> <script> // Mostrar detalles de plantas (toggle) function mostrarInformacion(id) { const planta = document.getElementById(id); const detalles = planta.querySelector('.plant-details'); document.querySelectorAll('.plant-details').forEach(detalle => { if (detalle !== detalles) detalle.classList.add('hidden'); }); detalles.classList.toggle('hidden'); } // Función para cerrar modal y limpiar formulario function cerrarModal() { document.getElementById("plantModal").style.display = "none"; document.getElementById("plantForm").reset(); } </script> <!-- EmailJS (si lo usas) --> <script src="https://cdn.emailjs.com/dist/email.min.js"></script> <script> emailjs.init("service_mwivj66"); </script> </body> </html> ```
+  function cerrarModal() {
+    document.getElementById("plantModal").style.display = "none";
+    document.getElementById("plantForm").reset();
+  }
+</script>
+
+<!-- EmailJS -->
+<script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+<script>
+  emailjs.init("service_mwivj66");
+</script>
+
+<!-- Tu archivo principal donde está mostrarMisPlantas() -->
+<script src="script.js" defer></script>
+
+</body>
+</html>
