--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ button>
 </section>
 
 <section id="misplantas">
-  <h2>🌱 Mis Plantas Registradas</h2>
+  <h2> id="tituloMisPlantas">🌱 Mis Plantas Registradas</h2>
     <div id="loginCorreo">
     <label for="correoConsulta">Introduce tu correo para ver tus plantas:</label>
     <input type="email" id="correoConsulta" placeholder="tucorreo@ejemplo.com">
@@ -336,7 +336,7 @@ button>
 
    <div id="panelUsuario" style="display:none;">
     <p><strong>Correo:</strong> <span id="correoActual"></span></p>
-    <button onclick="cerrarSesion()">Cerrar sesión</button>
+    <button id="cerrarSesionBtn" onclick="cerrarSesion()">Cerrar sesión</button>
   </div>  
 
   <div id="resultadoPlantas" class="plant-category"></div>
