--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ button>
 </section>
 
 <section id="misplantas">
-  <h2> id="tituloMisPlantas">🌱 Mis Plantas Registradas</h2>
+  <h2  id="tituloMisPlantas">🌱 Mis Plantas Registradas</h2>
     <div id="loginCorreo">
     <label for="correoConsulta">Introduce tu correo para ver tus plantas:</label>
     <input type="email" id="correoConsulta" placeholder="tucorreo@ejemplo.com">
