Reorganizar imágenes en carpeta images y actualizar server.js

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@ button>
 </div>
 <div class="plant" id="plant12">
 <h3>Suculenta</h3>
-<img src="suculenta.jpg" width="200" alt="Suculenta" onclick="mostrarInformacion('plant12')">
+<img src="images/suculenta.jpg" width="200" alt="Suculenta" onclick="mostrarInformacion('plant12')">
 <div class="plant-details hidden">
 <p>Tiempo de crecimiento: 6 -12 meses</p>
 <p>Humedad ideal: 40-60%</p>
