Actualiza script.js, server.js e index.html

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ fetch("https://parcial1-jennifer.onrender.com/verificar-humedad", {
     <div class="plant-category">
       <div class="plant" id="plant1">
         <h3>Hierbabuena</h3>
-        <img src="hiervabuena.jpg" width="200" alt="Hierbabuena" onclick="mostrarInformacion('plant1')">
+        <img src="images/hiervabuena.jpg" width="200" alt="Hierbabuena" onclick="mostrarInformacion('plant1')">
         <div class="plant-details hidden">
           <p>Tiempo de crecimiento: 2-3 meses</p>
           <p>Humedad ideal: 60-70%</p>
@@ -199,7 +199,7 @@ fetch("https://parcial1-jennifer.onrender.com/verificar-humedad", {
       </div>
       <div class="plant" id="plant2">
         <h3>Menta</h3>
-        <img src="menta.jpg" width="200" alt="Menta" onclick="mostrarInformacion('plant2')">
+        <img src="images/menta.jpg" width="200" alt="Menta" onclick="mostrarInformacion('plant2')">
         <div class="plant-details hidden">
           <p>Tiempo de crecimiento: 2-3 meses</p>
           <p>Humedad ideal: 60-70%</p>
@@ -209,7 +209,7 @@ fetch("https://parcial1-jennifer.onrender.com/verificar-humedad", {
       </div>
       <div class="plant" id="plant3">
         <h3>Romero</h3>
-        <img src="romero.jpg" width="200" alt="Romero" onclick="mostrarInformacion('plant3')">
+        <img src="images/romero.jpg" width="200" alt="Romero" onclick="mostrarInformacion('plant3')">
         <div class="plant-details hidden">
           <p>Tiempo de crecimiento: 6-12 meses</p>
           <p>Humedad ideal: 50-60%</p>
@@ -219,7 +219,7 @@ fetch("https://parcial1-jennifer.onrender.com/verificar-humedad", {
       </div>
       <div class="plant" id="plant4">
         <h3>Ruda</h3>
-        <img src="ruda.jpg" width="200" alt="Ruda" onclick="mostrarInformacion('plant4')">
+        <img src="images/ruda.jpg" width="200" alt="Ruda" onclick="mostrarInformacion('plant4')">
         <div class="plant-details hidden">
           <p>Tiempo de crecimiento: 3-6 meses</p>
           <p>Humedad ideal: 50-60%</p>
@@ -235,7 +235,7 @@ fetch("https://parcial1-jennifer.onrender.com/verificar-humedad", {
     <div class="plant-category">
       <div class="plant" id="plant5">
         <h3>Chile Verde</h3>
-        <img src="chileverde.jpg" width="200" alt="Chile Verde" onclick="mostrarInformacion('plant5')">
+        <img src="images/chileverde.jpg" width="200" alt="Chile Verde" onclick="mostrarInformacion('plant5')">
         <div class="plant-details hidden">
           <p>Tiempo de crecimiento: 2-3 meses</p>
           <p>Humedad ideal: 60-70%</p>
@@ -245,7 +245,7 @@ fetch("https://parcial1-jennifer.onrender.com/verificar-humedad", {
       </div>
       <div class="plant" id="plant6">
         <h3>Tomate</h3>
-        <img src="tomate.jpg" width="200" alt="Tomate" onclick="mostrarInformacion('plant6')">
+        <img src="images/tomate.jpg" width="200" alt="Tomate" onclick="mostrarInformacion('plant6')">
         <div class="plant-details hidden">
           <p>Tiempo de crecimiento: 2-3 meses</p>
           <p>Humedad ideal: 60-80%</p>
@@ -255,7 +255,7 @@ fetch("https://parcial1-jennifer.onrender.com/verificar-humedad", {
       </div>
       <div class="plant" id="plant7">
         <h3>Cebolla</h3>
-        <img src="cebolla.jpg" width="200" alt="Cebolla" onclick="mostrarInformacion('plant7')">
+        <img src="images/cebolla.jpg" width="200" alt="Cebolla" onclick="mostrarInformacion('plant7')">
         <div class="plant-details hidden">
           <p>Tiempo de crecimiento: 6-12 meses</p>
           <p>Humedad ideal: 50-70%</p>
@@ -265,7 +265,7 @@ fetch("https://parcial1-jennifer.onrender.com/verificar-humedad", {
       </div>
       <div class="plant" id="plant8">
         <h3>Cilantro</h3>
-        <img src="cilantro.jpg" width="200" alt="Cilantro" onclick="mostrarInformacion('plant8')">
+        <img src="images/cilantro.jpg" width="200" alt="Cilantro" onclick="mostrarInformacion('plant8')">
         <div class="plant-details hidden">
           <p>Tiempo de crecimiento: 3-6 meses</p>
           <p>Humedad ideal: 60-70%</p>
@@ -281,7 +281,7 @@ fetch("https://parcial1-jennifer.onrender.com/verificar-humedad", {
     <div class="plant-category">
       <div class="plant" id="plant9">
         <h3>Corona de Cristo</h3>
-        <img src="coronadecristo.jpg" width="200" alt="Corona de Cristo" onclick="mostrarInformacion('plant9')">
+        <img src="images/coronadecristo.jpg" width="200" alt="Corona de Cristo" onclick="mostrarInformacion('plant9')">
         <div class="plant-details hidden">
           <p>Tiempo de crecimiento: 2-3 meses</p>
           <p>Humedad ideal: 50-60%</p>
@@ -291,7 +291,7 @@ fetch("https://parcial1-jennifer.onrender.com/verificar-humedad", {
       </div>
       <div class="plant" id="plant10">
         <h3>Periskia</h3>
-        <img src="perizquia.jpg" width="200" alt="Periskia" onclick="mostrarInformacion('plant10')">
+        <img src="images/perizquia.jpg" width="200" alt="Periskia" onclick="mostrarInformacion('plant10')">
         <div class="plant-details hidden">
           <p>Tiempo de crecimiento: 2-3 meses</p>
           <p>Humedad ideal: 60-70%</p>
@@ -301,7 +301,7 @@ fetch("https://parcial1-jennifer.onrender.com/verificar-humedad", {
       </div>
       <div class="plant" id="plant11">
         <h3>Cactus Estrella</h3>
-        <img src="captusestrella.jpg" width="200" alt="Cactus Estrella" onclick="mostrarInformacion('plant11')">
+        <img src="images/captusestrella.jpg" width="200" alt="Cactus Estrella" onclick="mostrarInformacion('plant11')">
         <div class="plant-details hidden">
           <p>Tiempo de crecimiento: 2-3 años</p>
           <p>Humedad ideal: 30-50%</p>
