Tu mensaje de commit explicando los cambios

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ fetch("https://parcial1-jennifer.onrender.com/verificar-humedad", {
     <div class="plant-category">
       <div class="plant" id="plant1">
         <h3>Hierbabuena</h3>
-        <img src="images/hiervabuena.jpg" width="200" alt="Hierbabuena" onclick="mostrarInformacion('plant1')">
+        <img src="images/hierbabuena.jpg" width="200" alt="Hierbabuena" onclick="mostrarInformacion('plant1')">
         <div class="plant-details hidden">
           <p>Tiempo de crecimiento: 2-3 meses</p>
           <p>Humedad ideal: 60-70%</p>
