Actualización: imágenes y scripts de EcoGrow

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ fetch("https://parcial1-jennifer.onrender.com/verificar-humedad", {
     <div class="plant-category">
       <div class="plant" id="plant1">
         <h3>Hierbabuena</h3>
-        <img src="images/hierbabuena.jpg" width="200" alt="Hierbabuena" onclick="mostrarInformacion('plant1')">
+        <img src="images/Hierbabuena.jpg" width="200" alt="Hierbabuena" onclick="mostrarInformacion('plant1')">
         <div class="plant-details hidden">
           <p>Tiempo de crecimiento: 2-3 meses</p>
           <p>Humedad ideal: 60-70%</p>
@@ -291,7 +291,7 @@ fetch("https://parcial1-jennifer.onrender.com/verificar-humedad", {
       </div>
       <div class="plant" id="plant10">
         <h3>Periskia</h3>
-        <img src="images/periskia.jpg" width="200" alt="Periskia" onclick="mostrarInformacion('plant10')">
+        <img src="images/Periskia.jpg" width="200" alt="Periskia" onclick="mostrarInformacion('plant10')">
         <div class="plant-details hidden">
           <p>Tiempo de crecimiento: 2-3 meses</p>
           <p>Humedad ideal: 60-70%</p>
@@ -301,7 +301,7 @@ fetch("https://parcial1-jennifer.onrender.com/verificar-humedad", {
       </div>
       <div class="plant" id="plant11">
         <h3>Cactus Estrella</h3>
-        <img src="images/cactusestrella.jpg" width="200" alt="Cactus Estrella" onclick="mostrarInformacion('plant11')">
+        <img src="images/CactusEstrella.jpg" width="200" alt="Cactus Estrella" onclick="mostrarInformacion('plant11')">
         <div class="plant-details hidden">
           <p>Tiempo de crecimiento: 2-3 años</p>
           <p>Humedad ideal: 30-50%</p>
