Actualización: imágenes y scripts de EcoGrow

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ fetch("https://parcial1-jennifer.onrender.com/verificar-humedad", {
       </div>
       <div class="plant" id="plant10">
         <h3>Periskia</h3>
-        <img src="images/Periskia.jpg" width="200" alt="Periskia" onclick="mostrarInformacion('plant10')">
+        <img src="images/Periskia.jpg" width="200" alt="periskia" onclick="mostrarInformacion('plant10')">
         <div class="plant-details hidden">
           <p>Tiempo de crecimiento: 2-3 meses</p>
           <p>Humedad ideal: 60-70%</p>
